test_programs/compile_failure/noirc_frontend_tests_metaprogramming_errors_if_macros_inject_functions_with_name_collisions/src/main.nr

    comptime fn make_colliding_functions(_s: TypeDefinition) -> Quoted {
        quote { 
            fn foo() {}
        }
    }

    #[make_colliding_functions]
    struct Foo {}

    #[make_colliding_functions]
    struct Bar {}

    fn main() {
        let _ = Foo {};
        let _ = Bar {};
        foo();
    }
    